--- a/giphy-episode/src/estilos.css
+++ b/giphy-episode/src/estilos.css
@@ -2,8 +2,8 @@
 
 * {
   font-family: Raleway;
-  color: pink;
-  background-color: purple;
+  color: purple;
+  background-color: gray;
 }
 
 body {
