--- a/giphy-episode/src/estilos.css
+++ b/giphy-episode/src/estilos.css
@@ -35,21 +35,19 @@ h3 {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+
 }
 
 .card {
-  align-content: center;
-  align-items: center;
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.03);
-  display: flex;
-  flex-direction: column;
-  height: 0%;
-  justify-content: center;
-  margin-bottom: 20px;
-  margin-right: 20px;
-  overflow: hidden;
+ width: 190px;
+ height: 254px;
+ background: rgb(214, 147, 147);
+ box-shadow: rgba(0, 0, 0, 0.877) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+ margin: 6px;
+ transition: all 300ms;
+}
+.card :hover{
+ transform: scale(1.10);
 }
 
 .card p {
